Fix deprecated GitHub Actions versions
- Update actions/setup-python from v4 to v5
- Update actions/cache from v3 to v4
- Update actions/upload-artifact from v3 to v4
- Fix artifact naming to use run_number instead of run_date

--- a/.github/workflows/hi5_daily_check.yml
+++ b/.github/workflows/hi5_daily_check.yml
@@ -16,12 +16,12 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         
     - name: Cache pip dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -34,7 +34,7 @@ jobs:
         pip install -r requirements.txt
         
     - name: Load previous state
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: hi5_state.json
         key: hi5-state-${{ github.run_id }}
@@ -50,16 +50,16 @@ jobs:
         python hi5_etf_reminder.py
         
     - name: Save state for next run
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: hi5_state.json
         key: hi5-state-${{ github.run_id }}
         
     - name: Upload logs as artifact
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: hi5-logs-${{ github.run_date }}
+        name: hi5-logs-${{ github.run_number }}
         path: |
           hi5_state.json
         retention-days: 30
